--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Portafolio de GIFs</title>
+    <title>GABRIEL</title>
     <style>
         /* Habilita el scroll suave en toda la página */
         html {
