--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                         link: '#',
                         description: `
         <p>
-            Jump into the fray with <b>Cannon Fury: Siege Breakers</b>, an explosive top-down multiplayer game. 
+            Jump into the fray with <b>Tower Defender</b>, an explosive top-down multiplayer game. 
             Built from the ground up in <b>Unreal Engine 5</b>, the objective is simple: reduce the enemy fortress to rubble!
         </p>
         <ul>
