--- a/index.html
+++ b/index.html
@@ -486,6 +486,31 @@
             {
                 title: 'MY PROJECTS',
                 gifs: [
+                {
+                        file: '',
+                        youtubeId: 'Ntk-9wVQlmk',
+                        title: 'Spline Ribbon Plugin',
+                        link: '#',
+                        description: `
+        <p>
+        Elevate your visuals with <b>Procedural Spline Ribbon</b>, a powerful and flexible tool for Unreal Engine 5. 
+        Built entirely in C++, this plugin allows developers and artists to generate complex, dynamic ribbon meshes along any spline path with maximum performance and control.
+    </p>
+    <ul>
+        <li><i class="fa-solid fa-shapes"></i><span class="item-label"><b>Dynamic Geometry:</b></span><span>Instantly create smooth, flowing ribbons that follow the precise curvature and orientation of your splines, perfect for VFX, trails, and architectural details.</span></li>
+        <li><i class="fa-solid fa-sliders"></i><span class="item-label"><b>Deep Customization:</b></span><span>Fine-tune every aspect of the mesh, including resolution, subdivisions, and advanced smoothing algorithms with configurable iterations and intensity.</span></li>
+        <li><i class="fa-solid fa-bolt"></i><span class="item-label"><b>High-Performance:</b></span><span>Engineered with a C++ core to handle complex calculations and large amounts of vertices without sacrificing frame rates, making it ready for production environments.</span></li>
+    </ul>
+    <hr>
+    <p>This plugin is a showcase of advanced C++ and engine programming skills:</p>
+    <ul>
+        <li><i class="fa-solid fa-code"></i><span class="item-label"><b>Core C++ :</b></span><span>All core logic, from data management to mesh generation, is built in C++ for optimal performance, stability, and direct engine integration.</span></li>
+        <li><i class="fa-solid fa-cogs"></i><span class="item-label"><b>Asynchronous Processing:</b></span><span>Utilizes Unreal's Task Graph system to run heavy calculations like mesh subdivision and smoothing on background threads, ensuring a smooth, hitch-free experience in the editor.</span></li>
+        <li><i class="fa-solid fa-sitemap"></i><span class="item-label"><b>Procedural Generation:</b></span><span>Implementation of complex algorithms for mesh manipulation, including robust smoothing that correctly handles borders and corners, and edge-welding for creating seamless loops.</span></li>
+    </ul>
+    <em>A tool-focused project designed to create a powerful, flexible, and production-ready visual effects system in Unreal Engine.</em>
+    `
+                    },
                     {
                         file: '',
                         youtubeId: 'JD1cDuqxqj4',
