--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                         file: '',
                         youtubeId: 'Ntk-9wVQlmk',
                         title: 'Spline Ribbon Plugin',
-                        link: '#',
+                        link: 'https://www.fab.com/listings/9a4b749d-e2a8-43b1-9d65-b6554642700e',
                         description: `
         <p>
         Elevate your visuals with <b>Procedural Spline Ribbon</b>, a powerful and flexible tool for Unreal Engine 5. 
