--- a/index.html
+++ b/index.html
@@ -513,6 +513,30 @@
                     },
                     {
                         file: '',
+                        youtubeId: 'A9ubPoA4Ook',
+                        title: 'Actor Function Trigger Plugin',
+                        link: 'https://www.fab.com/listings/c0e68a71-6eec-4c65-b4f6-b17e28dd0906',
+                        description: `
+        <p>
+    Accelerate your workflow with <b>Actor Action Panel</b>, a powerful and intuitive editor utility for Unreal Engine 5. Developed entirely in C++, this plugin introduces a new editor panel designed to streamline actor management and interaction in real-time.
+</p>
+<ul>
+    <li><i class="fa-solid fa-filter"></i><span class="item-label"><b>Advanced Actor Filtering:</b></span><span>Instantly find and isolate actors in the current level by their specific class, eliminating the need for manual searches in the World Outliner.</span></li>
+    <li><i class="fa-solid fa-hand-pointer"></i><span class="item-label"><b>Direct Function Execution:</b></span><span>Access and execute any 'Call in Editor' function on the filtered actors with a single click, perfect for batch operations and streamlined testing.</span></li>
+    <li><i class="fa-solid fa-window-maximize"></i><span class="item-label"><b>Seamless Integration:</b></span><span>Designed as user-friendly editor panel that seamlessly integrates with the Unreal Engine UI, centralizing your utility tools.</span></li>
+</ul>
+<hr>
+<p>This plugin is a showcase of advanced C++ and engine customization skills:</p>
+<ul>
+    <li><i class="fa-solid fa-code"></i><span class="item-label"><b>Native C++ Editor Module:</b></span><span>All logic, from the Slate UI to level interaction, is built in C++ for optimal performance and deep integration with the editor.</span></li>
+    <li><i class="fa-solid fa-atom"></i><span class="item-label"><b>Reflection System Utilization:</b></span><span>Leverages Unreal's reflection system to dynamically discover actor classes and available 'Call in Editor' functions, showcasing the ability to interact with engine metadata.</span></li>
+    <li><i class="fa-solid fa-wrench"></i><span class="item-label"><b>Editor Tool Development:</b></span><span>Implementation of a practical productivity tool that demonstrates the ability to extend the engine's capabilities and significantly improve development workflows.</span></li>
+</ul>
+<em>An editor-focused utility designed to boost productivity and simplify the management of complex scenes in Unreal Engine.</em>
+    `
+                    },
+                    {
+                        file: '',
                         youtubeId: 'JD1cDuqxqj4',
                         title: 'Tower Defender WIP',
                         link: '#',
